--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "electron": "^9.0.0",
+    "electron-devtools-installer": "^3.1.0",
+    "vue-cli-plugin-electron-builder": "^2.0.0-rc.4"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^5.2.4",
+    "@types/node": "12",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-e2e-cypress": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
@@ -38,6 +48,7 @@
     "lint-staged": "^8.1.5",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "spectron": "^11.0.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10"
   },
@@ -49,5 +60,6 @@
       "vue-cli-service lint",
       "git add"
     ]
-  }
+  },
+  "main": "background.js"
 }
