--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "dependencies": {
     "chai-as-promised": "^7.1.1",
     "core-js": "^2.6.5",
-    "register-service-worker": "^1.6.2",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1",
     "electron": "^9.0.0",
     "electron-devtools-installer": "^3.1.0",
-    "vue-cli-plugin-electron-builder": "^2.0.0-rc.4"
+    "register-service-worker": "^1.6.2",
+    "reset-css": "^5.0.1",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.0.2",
+    "vue-cli-plugin-electron-builder": "^2.0.0-rc.4",
+    "vue-property-decorator": "^8.1.0",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
@@ -60,6 +61,9 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "electronDownload": {
+    "mirror": "https://npm.taobao.org/mirrors/electron/"
   },
   "main": "background.js"
 }
