--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,8 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      // "webpack-env",
-      "mocha",
-      "chai"
+      "webpack-env",
+      "jest"
     ],
     "paths": {
       "@/*": [
