Misc: 更新 README 和 VSCode 配置

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,9 @@
     "octref.vetur",
 
     // 注释扩展
-    "joelday.docthis"
+    "joelday.docthis",
+
+    // 文件头注释扩展
+    "obkoro1.korofileheader"
   ]
 }
