Misc: 更新 VSCode 推荐插件

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,18 +2,16 @@
   // VS Code 推荐扩展
   // See http://go.microsoft.com/fwlink/?LinkId=827846
   // for the documentation about the extensions.json format
-
   "recommendations": [
     // Js 风格检查和修复扩展
     "dbaeumer.vscode-eslint",
-
     // Js 风格检查和修复扩展
     "dbaeumer.vscode-eslint",
-
     // Vue
     "octref.vetur",
-
     // 注释扩展
-    "obkoro1.korofileheader"
+    "obkoro1.korofileheader",
+    // 格式化扩展
+    "esbenp.prettier-vscode"
   ]
 }
